# data_manager

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
src/data_manager/: __init__.py  runtime.py  store.py
tests/: test_data_manager.py  test_runtime_configuration.py
